@@ -11,9 +11,9 @@ import java.util.logging.Logger;
 import javax.swing.JFileChooser;
 
 import edu.colorado.phet.translationutility.jar.DocumentAdapter;
+import edu.colorado.phet.translationutility.jar.FlashJarCreator;
 import edu.colorado.phet.translationutility.jar.JarUtils;
 import edu.colorado.phet.translationutility.jar.DocumentIO.DocumentIOException;
-import edu.colorado.phet.translationutility.jar.JarCreator.FlashJarCreator;
 import edu.colorado.phet.translationutility.util.FileChooserFactory;
 
 /**
